--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
         "zip-lib": "^0.7.3"
     },
     "devDependencies": {
+        "@telefonica/aura-configuration": "1.1.0",
         "@types/async": "^3.2.7",
         "@types/chai": "^4.2.3",
         "@types/chai-as-promised": "^7.1.4",
